--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -16,13 +16,11 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-cmake_minimum_required (VERSION 2.6)
 
 include(CheckLibraryExists)
 include(CheckSymbolExists)
 
-project (Proton C)
-
+# PHTODO remove verion numbers
 set (PN_VERSION_MAJOR 0)
 set (PN_VERSION_MINOR 3)
 set (PN_VERSION "${PN_VERSION_MAJOR}.${PN_VERSION_MINOR}")
