PROTON-194: WIP pulled up README files (not finished), tidied up cmake files (eg now including proton.py in proton-j-impl.jar), and renamed maven profile to proton-jni.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/branches/jni-binding@1440006 13f79535-47bb-0310-9956-ffa450edef68

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ set (PN_VERSION "${PN_VERSION_MAJOR}.${PN_VERSION_MINOR}")
 
 # Location of proton-api jar created by the build; used by proton-jni and proton-j-impl
 set (PROTON_API_TARGET_JAR ${CMAKE_BINARY_DIR}/proton-j/proton-api/proton-api-${PN_VERSION}.jar)
+set (PROTON_JAR_DEPEND_DIR /usr/share/java/ CACHE PATH
+      "When locating compile-time dependencies, the build system searches this location in addition to the default ones provided by find_jar")
 
 # Used to allow the building of the Java bindings when CMAKE_VERSION < 2.6.8
 if ( ${CMAKE_VERSION} VERSION_LESS "2.8.6" )
