PROTON-194: WIP moved python tests to shallower location for convenience of C developers; general pom.xml tidying up
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/branches/jni-binding@1440007 13f79535-47bb-0310-9956-ffa450edef68

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -37,6 +37,11 @@ The proton-jni profile looks for the JNI jar and native libraries under director
 To override this, run Maven like so: &quot;mvn test -P proton-jni -Dproton-c-build-dir=/path/to/build/dir&quot;.</description>
 
   <build>
+    <!-- System tests are arranged by language, hence the non-default location of the JUnit tests. -->
+    <testSourceDirectory>java</testSourceDirectory>
+    <resources>
+      <resource><directory>python</directory></resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
