PROTON-194 : Add alternate names for bouncycastle jars
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1441757 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-j/proton/CMakeLists.txt
+++ b/proton-j/proton/CMakeLists.txt
@@ -20,12 +20,12 @@
 set(BOUNCYCASTLE_VERSION 1.47 CACHE STRING "Version of Bouncycastle to compile proton-j-impl against")
 
 find_jar(BOUNCYCASTLE_BCPKIX_JAR
-         NAMES bcpkix-jdk15on
+         NAMES bcpkix-jdk15on bcpkix
          PATHS ${PROTON_JAR_DEPEND_DIR}
          VERSIONS ${BOUNCYCASTLE_VERSION}
          DOC "Full path to Bouncycastle PKIX jar")
 find_jar(BOUNCYCASTLE_BCPROV_JAR
-         NAMES bcprov-jdk15on
+         NAMES bcprov-jdk15on bcprov
          PATHS ${PROTON_JAR_DEPEND_DIR}
          VERSIONS ${BOUNCYCASTLE_VERSION}
          DOC "Full path to Bouncycastle Provider jar")
