PROTON-213: Visual Studio / C99 grumpiness.  See https://reviews.apache.org/r/9169/
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1441965 13f79535-47bb-0310-9956-ffa450edef68

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,11 @@
 cmake_minimum_required (VERSION 2.6)
 
 option(BUILD_WITH_CXX "Compile Proton using C++" OFF)
+if ("${CMAKE_GENERATOR}" MATCHES "^Visual Studio")
+  # No C99 capability, use C++
+  set(BUILD_WITH_CXX ON)
+endif ("${CMAKE_GENERATOR}" MATCHES "^Visual Studio")
+
 if (BUILD_WITH_CXX)
   project (Proton C CXX)
 else (BUILD_WITH_CXX)
