--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -114,7 +114,12 @@ else (CLOCK_GETTIME_IN_LIBC)
     set (TIME_LIB rt)
     list(APPEND PLATFORM_DEFINITIONS "USE_CLOCK_GETTIME")
   else (CLOCK_GETTIME_IN_RT)
-    list(APPEND PLATFORM_DEFINITIONS "USE_GETTIMEOFDAY")
+    CHECK_SYMBOL_EXISTS(GetSystemTimeAsFileTime "windows.h" WINDOWS_FILETIME)
+    if (WINDOWS_FILETIME)
+      list(APPEND PLATFORM_DEFINITIONS "USE_WIN_FILETIME")
+    else (WINDOWS_FILETIME)
+      list(APPEND PLATFORM_DEFINITIONS "USE_GETTIMEOFDAY")
+    endif (WINDOWS_FILETIME)
   endif (CLOCK_GETTIME_IN_RT)
 endif (CLOCK_GETTIME_IN_LIBC)
 
@@ -157,6 +162,18 @@ if (STRERROR_R_IN_LIBC)
   list(APPEND PLATFORM_DEFINITIONS "USE_STRERROR_R")
 endif (STRERROR_R_IN_LIBC)
 endif (PN_WINAPI)
+
+CHECK_SYMBOL_EXISTS(atoll "stdlib.h" C99_ATOLL)
+if (C99_ATOLL)
+  list(APPEND PLATFORM_DEFINITIONS "USE_ATOLL")
+else (C99_ATOLL)
+  CHECK_SYMBOL_EXISTS(_atoi64 "stdlib.h" WINAPI_ATOI64)
+  if (WINAPI_ATOI64)
+    list(APPEND PLATFORM_DEFINITIONS "USE_ATOI64")
+  else (WINAPI_ATOI64)
+    message(FATAL_ERROR "No atoll API found")
+  endif (WINAPI_ATOI64)
+endif (C99_ATOLL)
 
 # Try to keep any platform specific overrides together here:
 
