PROTON-215: Interop test: make finding AMQP fragments more robust.
Python: find the interop fragments by walking up the directory tree from __file__.
Java: Copy AMQP fragments as resources.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1446307 13f79535-47bb-0310-9956-ffa450edef68

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -43,6 +43,7 @@ To override this, run Maven like so: &quot;mvn test -P proton-jni -Dproton-c-bui
     <testSourceDirectory>java</testSourceDirectory>
     <resources>
       <resource><directory>python</directory></resource>
+      <resource><directory>interop</directory></resource>
     </resources>
     <plugins>
       <plugin>
