fixed example build
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1446816 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -235,7 +235,7 @@ endif (SWIG_FOUND)
 
 add_subdirectory(docs/api)
 add_subdirectory(docs/man)
-add_subdirectory(examples/messenger/c)
+add_subdirectory(../examples/messenger/c examples/messenger/c)
 
 set (qpid-proton-platform
   ${pn_driver_impl}
