--- a/proton-j/proton-api/CMakeLists.txt
+++ b/proton-j/proton-api/CMakeLists.txt
@@ -23,3 +23,5 @@ file(GLOB_RECURSE SOURCES_ABS "src/main/java/*.java")
 
 add_jar(proton-api ${SOURCES_ABS})
 rebuild_jar(proton-api proton-api-${PN_VERSION}.jar)
+
+install_jar(proton-api ${JAVA_INSTALL_DIR})
