PROTON-242: Shared library used JNI code has poor name "libproton-swig.so"
Shared library now has name libproton-jni.so i.e. follows the naming conventions of its companion jar.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1447222 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/java/CMakeLists.txt
+++ b/proton-c/bindings/java/CMakeLists.txt
@@ -28,7 +28,8 @@ swig_link_libraries(proton-swig ${BINDING_DEPS}  )
 
 set_target_properties(proton-swig
     PROPERTIES
-    PREFIX "lib")
+    OUTPUT_NAME "proton-jni"
+    PREFIX ${CMAKE_SHARED_LIBRARY_PREFIX})
 
 add_custom_command(OUTPUT ${CMAKE_SWIG_OUTDIR} COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_SWIG_OUTDIR} COMMENT "Creating target directory for Proton-JNI sources")
 add_custom_target(protonjnioutdir ALL DEPENDS ${CMAKE_SWIG_OUTDIR})
