PROTON-249: Use a source file list when compiling java sources to avoid hitting command line length limits
* changed UseJava's add_jar pass a source file list to javac instead of many individual files on the command line
* added function add_jar_from_filelist which behaves like CMake-builtin add_jar but accepts a file contain a list of files
  (used to compile Java output of Swig)
* added ProtonUseJavaSourceFileList to extract a list of Java source files from one or more directories

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1451242 13f79535-47bb-0310-9956-ffa450edef68

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ list(GET PN_VERSION_LIST 0 PN_VERSION_MAJOR)
 list(GET PN_VERSION_LIST 1 PN_VERSION_MINOR)
 
 set (PN_VERSION "${PN_VERSION_MAJOR}.${PN_VERSION_MINOR}")
-message("PN_VERSION: ${PN_VERSION}")
+message(STATUS "PN_VERSION: ${PN_VERSION}")
 
 enable_testing()
 include (CTest)
@@ -86,9 +86,9 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/tools/cmake/Modu
 
 find_package( Java )
 if (JAVA_FOUND)
-  message("Java version: ${Java_VERSION}. javac is at: ${Java_JAVAC_EXECUTABLE}")
+  message(STATUS "Java version: ${Java_VERSION}. javac is at: ${Java_JAVAC_EXECUTABLE}")
   include(UseJava)
-  include(UseProtonJava)
+  include(ProtonUseJava)
 
   add_subdirectory(proton-j/proton-api)
   add_subdirectory(proton-j/proton)
