PROTON-257: Added test that illustrates use of the Engine and Message proton-j APIs. Also added LoggingProtocolTracer and TestLoggingHelper. Configured Java Logging during test runs initiated by Maven.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1453852 13f79535-47bb-0310-9956-ffa450edef68

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -44,6 +44,7 @@ To override this, run Maven like so: &quot;mvn test -P proton-jni -Dproton-c-bui
     <resources>
       <resource><directory>python</directory></resource>
       <resource><directory>interop</directory></resource>
+      <resource><directory>resources</directory></resource>
     </resources>
     <plugins>
       <plugin>
@@ -52,6 +53,7 @@ To override this, run Maven like so: &quot;mvn test -P proton-jni -Dproton-c-bui
         <configuration>
           <systemPropertyVariables>
             <protonJythonTestsXmlOutputDirectory>${testReportOutputDirectory}</protonJythonTestsXmlOutputDirectory>
+            <java.util.logging.config.file>${build.outputDirectory}/logging.properties</java.util.logging.config.file>
           </systemPropertyVariables>
          <reportsDirectory>${testReportOutputDirectory}</reportsDirectory>
         </configuration>
